--- a/package.json
+++ b/package.json
@@ -9,15 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@sanity/assist": "^3.0.8",
+    "@sanity/client": "^6.24.1",
+    "@sanity/icons": "^3.5.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.66.1",
+    "@tanstack/react-query": "^5.62.3",
+    "@tanstack/react-query-devtools": "^5.62.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "lqip-modern": "^2.2.1",
     "lucide-react": "^0.417.0",
-    "next": "14.2.5",
+    "next": "^14.2.20",
+    "next-sanity": "^9.8.25",
+    "next-sanity-image": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "sanity": "^3.66.1",
+    "styled-components": "^6.1.13",
     "swiper": "^11.1.8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
